Make sure alignment is correct in table headers

--- a/styles.scss
+++ b/styles.scss
@@ -105,6 +105,13 @@
             text-align: left;
             font-size: var(--font-ui-smaller);
             color: var(--color-base-70);
+
+            &.align-center {
+                text-align: center;
+            }
+            &.align-right {
+                text-align: right;
+            }
         }
 
         tbody td {
